salesforce-healthcare-demo/force-app/main/default/objects/Prescription__c/Prescription__c.object-meta.xml
<CustomObject>
    <description>Patient prescriptions / medications</description>
    <label>Prescription</label>
    <nameField>
        <label>Medication</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prescriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>