salesforce-healthcare-demo/force-app/main/default/objects/Prescription__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <length>80</length>
    <type>Text</type>
</CustomField>