salesforce-healthcare-demo/force-app/main/default/objects/Prescription__c/fields/Prescriber__c.field-meta.xml
<CustomField>
    <fullName>Prescriber__c</fullName>
    <label>Prescriber</label>
    <length>120</length>
    <type>Text</type>
</CustomField>