salesforce-healthcare-demo/force-app/main/default/objects/Prescription__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <label>Route</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Oral</fullName>
            <default>true</default>
            <label>Oral</label>
        </value>
        <value>
            <fullName>IV</fullName>
        </value>
        <value>
            <fullName>Topical</fullName>
        </value>
        <value>
            <fullName>Inhaled</fullName>
        </value>
        <value>
            <fullName>Subcutaneous</fullName>
        </value>
        <value>
            <fullName>Other</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>