salesforce-healthcare-demo/force-app/main/default/objects/Prescription__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Active</fullName>
            <default>true</default>
            <label>Active</label>
        </value>
        <value>
            <fullName>Completed</fullName>
        </value>
        <value>
            <fullName>Discontinued</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>